add source object definition save/get endpoints

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     annotationProcessor("org.projectlombok:lombok:1.18.24")
     implementation(name: 'su')
     implementation('org.springframework.boot:spring-boot-starter-web')
-
+    implementation('org.springdoc:springdoc-openapi-ui:1.6.9')
 
     // Use JUnit Jupiter for testing.
     testCompileOnly("org.projectlombok:lombok:1.18.24")
